# dotfiles

./: .Xmodmap  .agignore  .aliases  .bash_profile  .bashrc  .conkeyrc  .conkyrc  .dockerconfig  .dockerignore  .editorconfig  .env  .envrc_example  .envs  .eslintrc  .export  .git_commit_msg.txt  .gitconfig  .gitignore  .i3status.conf  .inputrc  .jshintignore  .jshintrc  .mongorc.js  .muttrc  .my.cnf  .npmrc  .ptconfig.toml  .screenrc  .taskrc  .tern-config  .tern-project  .tigrc  .tmux.conf  .vimrc  .vimrc_orig  .xbindkeysrc  .xinitrc  .xinputrc  .xmobarrc  .xmodmap  (+28 more)
.config/: compton.conf  redshift.conf  zoomus.conf
.ssh/: config
.vim/: dein.toml
android/: android
conky/: conky-gcal  conky-news  conky.sh  rss.sh
grc/: grc.conf
i3/: autolock.sh  check_btr.sh  config  conky-cal  conky-gcal  conky-info  conky-news  conky-profile  conky-sys  conky-time  conky.sh  find.pl  focus_last.py  monitor.sh  new_workspace.sh  nw.py  rss.sh
import/: apm.sh  brew.sh  get.sh  npm.sh  pip.sh
install/: apm.sh  apt.sh  brew.sh  deb.sh  get.sh  meteor.sh  npm.sh  nvm.sh  other.sh  pip.sh  setup.sh  vim.sh  win.txt
js/: .jshintrc  .node-inspectorrc  .npmrc
linux/: and.sh  bsstudio.sh  cui.sh  fusuma.sh  gui.sh  i3.sh  link.sh  ssh.sh  touchpad.sh  vim.sh
mannual/: docker.md  ssh.md  vpn-setup.md  vpn.md
manual/: aws-init.md  backup.md  docker.md  fcitx.md  find-font.md  firefox.md  font.md  gnome3.md  goldendict.md  gpg.md  hhkb.md  i3.md  ime.md  install-font.md  manjaro.md  mysql.md  node.md  ntp.md  (+15 more)
scripts/pydevtools/: .pre-commit-config.yaml  pyproject.toml
(+534 files in other folders)
